--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 }
 
 .home .couple {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .home .couple h3 {
@@ -125,15 +125,16 @@ body {
 }
 
 .home .heart {
-  width: 50px;
-  height: 50px;
+  font-size: 30px;
+  width: 100px;
+  height: 100px;
   background-color: white;
   display: flex;
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   position: absolute;
   left: 50%;
-  transform: translateX(-50%) translateY(65px);
+  transform: translateX(-50%) translateY(32.5px);
 }
 
 .home .heart i {
@@ -388,9 +389,9 @@ footer li {
 /* Media Query */
 /* Extra large */
 @media (max-width: 1200px) {
-  .home .heart {
+  /* .home .heart {
     transform: translateX(-50%) translateY(45px);
-  }
+  } */
 }
 
 /* laptop */
@@ -404,7 +405,14 @@ footer li {
   }
 
   .home .heart {
-    display: none;
+    transform: translateX(-50%) translateY(-28px);
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    display: flex;
+    border-radius: 50%;
+    position: relative;
+    font-size: 25px;
   }
 
   .timeline::before {
@@ -477,8 +485,12 @@ footer li {
     font-size: 60%;
   }
 
+  .pria {
+    margin-bottom: 50px;
+  }
+
   .simply-countdown > .simply-section {
-    padding: 45px;
+    padding: 35px;
     margin: 3px;
   }
 
@@ -504,8 +516,10 @@ footer li {
     background-image: url(img/bg.png);
     background-size: cover;
     min-height: 100vh;
-    padding-top: 10rem;
-    padding-bottom: 5rem;
+  }
+
+  .center {
+    padding: 25vh 0;
   }
 
   .gifts {
